# CScript

./: .gitignore  Cargo.toml  README.md
doc/: addition01.md  addition02.md  addition03.md  issue01.md  issue02.md
examples/: enums.c  enums.csr  error_cases.csr  error_test.csr  hello.c  hello.csr  mutability.c  mutability.csr  option.csr  option_complete.csr  result_test.csr  stress_test.csr  struct_member_test.csr  structs.csr  type_strictness.csr  types.c  types.csr
examples/FunCSRPrograms/: verysimple.csr
src/: driver.rs  lib.rs  main.rs
src/codegen/: c_emitter.rs  mod.rs
src/diagnostics/: mod.rs  reporter.rs
src/lexer/: mod.rs  scanner.rs  token.rs
src/parser/: ast.rs  expression.rs  mod.rs  statement.rs
src/semantic/: mod.rs  symbol_table.rs  type_checker.rs
